<resources>
    <string name="app_name">BlocParty</string>
    <string name="hello_world">I am BlocParty</string>
    <string name="action_settings">Settings</string>
    <string name="fbai">1044437868934839</string>
    <string name="fbat">CAACEdEose0cBAPgQXePmTHmVZA5jNYucZAEkNLM2yZBNqyOroF83jFoiSsPAp9Wm2E7G2NfMZCy
        CwVudG2SmW1uyPfNl6HmazYilOkYPf64kUXypjmK96W4AyjCXtNXGiDbvoWzDZBXEPqRYvwFf8wgZBoW7lSmiYvEYw
        L530bon5R7DZC0QQeueWY0yMQxKT6XuqhxUvQBHwZDZD</string>
    <string name="login_item_dummy_item_name">Dummy Item Name Blarg</string>
    <string name="login_item_dummy_item_description">This is a headline you would like to give about your login item!</string>
    <string name="camera_mode_text">Camera</string>
    <string name="collection_mode_text">Add Collection</string>
    <string name="collection_add_cancel">Cancel</string>
    <string name="collection_add_save">Save</string>
    <string name="account_mode_text">Account</string>
    <string name="welcome_message">Welcome to BlocParty! To get started, toggle at least one switch to log in.</string>
    <string name="igc">4034d9cd68834821842ca8978869ed28</string>
    <string name="igcs">ede95f9c9bd640679f5fab75857e2c37</string>
    <string name="igcu">https://instagram.com/</string>
    <string name="tck">dbrn7UcYRBACbXJqR3jO1Jn8u</string>
    <string name="tcs">A9RYEYjy9XXTv3YMYLqGseg2LB47Lox6gyb5cZvbLq5LHqAiO0</string>
    <string name="tcu">https://mobile.twitter.com/</string>
    <string name="tat">3646501040-p9bxgenZQ4vP3xZe87aF77B2m4E7KmEpxUeT1j6</string>
    <string name="tats">OQPNP9AFWcFmoJbCU6MDzzcvf9qyIEOUIPdgbGWPxxkwW</string>
    <string name="post_item_test_message">This is a test to see how this is going to work.
        I don\'t know what I am writing here but this is just a test blah blah blah to see the limits of
        this box. DO do do dodo do dod blah blah blah blah blah blah robo boogie</string>
    <string name="dummy_op_name">Richard M.</string>
    <string name="publish_text">Published:</string>
    <string name="social_media">Social Media</string>
    <string name="instagram_text">Instagram</string>
    <string name="facebook_text">Facebook</string>
    <string name="twitter_text">Twitter</string>
    <string name="log_in_text">Log In</string>
    <string name="choose_collection_text">Choose Collection</string>
    <string name="create_collection_text">Create Collection</string>
    <string name="create_collection_instruction">1. Enter collection name: </string>
    <string name="add_user_instruction">2. Add user(s) to collection: </string>
    <string name="collection_dummy_text">Collection Test</string>
    <string name="collection_num_users">4</string>
    <string name="collection_user_text">users</string>
    <string name="dummy_user_text">Richard Richardson</string>
    <string name="collection_counter_limit">30</string>
    <string name="collection_counter_value">0</string>
    <string name="counter_slash">/</string>
    <string name="empty_user_text">No users to add here :(</string>
    <string name="empty_collection_text">There are no collections.... :|</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="insert_caption_text">Insert caption:</string>
    <string name="share_text">Share</string>
    <string name="download_text">Download Image</string>
    <string name="action_upload_text">Upload</string>
    <string name="downloading_text">Downloading...</string>
    <string name="downloaded_text">DOWNLOADED</string>
    <string name="dummy_percent_value">100</string>
    <string name="percent_sign">%</string>

</resources>
