<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/click_effect">

    <LinearLayout
        android:id="@+id/ll_name_and_user_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/tv_collection_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_dummy_text"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_collection_user_num_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/collection_num_users"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tv_collection_users_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/collection_user_text"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_users_pics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ll_name_and_user_num"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:id="@+id/ll_top_user_pics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_top_left_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_top_right_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_user_pics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/ll_top_user_pics">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_bot_left_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_bot_right_pic"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>