<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Preview Image Area -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/black_12"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/iv_preview_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"/>

    </FrameLayout>

    <!-- Caption Area -->

    <TextView
        android:id="@+id/tv_caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_caption_text"
        android:textSize="16sp"
        android:textColor="@color/black_87"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_caption_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_87"
        android:layout_gravity="center_horizontal"
        android:maxLines="4"
        android:maxEms="8"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black_12"
        android:layout_marginBottom="8dp"/>

    <!-- Download Area -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="36dp">

        <TextView
            android:id="@+id/tv_download_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_text"
            android:textSize="16sp"
            android:textColor="@color/black_87"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/btn_download_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_file_download_black_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black_12"
        android:layout_marginBottom="8dp"/>

    <!-- Share Area -->

    <TextView
        android:id="@+id/tv_share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="@color/black_87"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <ImageView
            android:id="@+id/iv_share_fb_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/fb_logo"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_facebook_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_text"
            android:textSize="18sp"
            android:textColor="@color/black_87"
            android:layout_toRightOf="@+id/iv_share_fb_profile"
            android:layout_toEndOf="@+id/iv_share_fb_profile"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/cb_fb_share_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <ImageView
            android:id="@+id/iv_share_tw_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/twitter_logo"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_twitter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter_text"
            android:textSize="18sp"
            android:textColor="@color/black_87"
            android:layout_toRightOf="@+id/iv_share_tw_profile"
            android:layout_toEndOf="@+id/iv_share_tw_profile"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/cb_tw_share_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp">

        <ImageView
            android:id="@+id/iv_share_dl"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/ig_logo"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_instagram_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_text"
            android:textSize="18sp"
            android:textColor="@color/black_87"
            android:layout_toRightOf="@+id/iv_share_dl"
            android:layout_toEndOf="@+id/iv_share_dl"
            android:layout_centerVertical="true"/>

        <CheckBox
            android:id="@+id/cb_ig_share_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

</LinearLayout>