<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/ll_top_post_bar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@color/material_amber_900"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tv_op_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_op_name"
                android:textSize="18sp"
                android:textColor="@color/black_60"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_profile_pic"
                android:layout_toEndOf="@+id/iv_profile_pic"/>

            <Button
                android:id="@+id/btn_like_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/red_40"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_more_settings"
                android:layout_toStartOf="@+id/btn_more_settings" />

            <Button
                android:id="@+id/btn_more_settings"
                android:layout_width="24dp"
                android:layout_height="40dp"
                android:background="@color/material_blue_grey_300"
                android:layout_alignTop="@+id/btn_like_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_12"/>

        <FrameLayout
            android:id="@+id/fl_image_region"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/post_img_border">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:indeterminate="false"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:scaleType="centerCrop"
                android:background="@color/blue_50"/>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_12"/>

        <LinearLayout
            android:id="@+id/ll_caption_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_post_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="@string/post_item_test_message"
                android:textSize="14sp"
                android:textColor="@color/black_60"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_12"/>

        <RelativeLayout
            android:id="@+id/ll_publish_date_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_text"
                android:textColor="@color/black_26"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/tv_publish_date"
                android:layout_toStartOf="@+id/tv_publish_date"
                android:layout_marginRight="4dp"/>

            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/15"
                android:textColor="@color/black_26"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>